Add link to github source

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
     <a href="http://www.reddit.com/r/askscience/comments/wmzrz/is_xkcd_right_about_password_strength/">Is XKCD right about password strength?</a> short answer: YES!
     <br/>
     I need to generate a difficult to remember secure password <a href="https://lastpass.com/generatepassword.php">HERE</a>
+    <br/>
+    <a href="https://github.com/j-c-m/xkcd-password-generator">source @ github</a>
 </body>
 </html>
