--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -6,17 +6,17 @@
     <meta http-equiv="Expires" content="-1">
 
     <title>xkcd inspired password generator</title>
-    <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js" type="text/javascript">
+    <script src="https://jmiller.com/yui/yui/yui-min.js" type="text/javascript">
 </script>
     <script src="pw.js.php" type="text/javascript">
 </script>
     <script src="index.js" type="text/javascript">
 </script>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="/css/jmiller.css">
 </head>
 
 <body>
-    Secure, strong, easy to remember passwords inspired by: <a href="https://xkcd.com/936/">XKCD</a>
+    <header class="page_header">Secure, strong, easy to remember passwords inspired by: <a href="https://xkcd.com/936/">XKCD</a></header>
     <div id="password"></div>
     <button id="generate_button">generate</button>
     <button id="select">select</button><br/><br/>
