--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="Expires" content="-1">
 
     <title>xkcd inspired password generator</title>
-    <script src="https://jmiller.com/yui/yui/yui-min.js" type="text/javascript">
+    <script src="jquery-2.1.0.min.js" type="text/javascript">
 </script>
     <script src="pw.js.php" type="text/javascript">
 </script>
     <script src="index.js" type="text/javascript">
 </script>
-    <link rel="stylesheet" type="text/css" href="/css/jmiller.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css">
+    <style>body { text-align: center; }</style>
 </head>
 
 <body>
-    <header class="page_header">Secure, strong, easy to remember passwords inspired by: <a href="https://xkcd.com/936/">XKCD</a></header>
+    <header class="site-header">Secure, strong, easy to remember passwords inspired by: <a href="https://xkcd.com/936/">XKCD</a></header>
     <div id="password"></div>
     <button id="generate_button">generate</button>
     <button id="select">select</button><br/><br/>
