--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>xkcd inspired password generator</title>
     <script src="jquery-2.1.0.min.js" type="text/javascript">
 </script>
-    <script src="pw.js.php" type="text/javascript">
+    <script src="pw.js" type="text/javascript">
 </script>
     <script src="index.js" type="text/javascript">
 </script>
