Add entropy calculations.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <button id="digits">digits</button>
     <button id="caps">caps</button>
     <button id="spaces">spaces</button>
-    <br/><br/><br/>
+    <br/><br/>
+    entropy: <span id="entropy"></span> bits<br/>
+    brute force entropy: <span id="brute_entropy"></span> bits
+    <br/><br/>
     <a href="http://www.reddit.com/r/askscience/comments/wmzrz/is_xkcd_right_about_password_strength/">Is XKCD right about password strength?</a> short answer: YES!
     <br/>
     I need to generate a difficult to remember secure password <a href="https://lastpass.com/generatepassword.php">HERE</a>
