--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
     <br/><br/>
     <a href="http://www.reddit.com/r/askscience/comments/wmzrz/is_xkcd_right_about_password_strength/">Is XKCD right about password strength?</a> short answer: YES!
     <br/>
-    I need to generate a difficult to remember secure password <a href="https://lastpass.com/generatepassword.php">HERE</a>
+    I need to generate a difficult to remember secure password <a href="https://bitwarden.com/password-generator/">HERE</a>
     <br/>
+    I recommend the password manager <a href="https://bitwarden.com/">Bitwarden</a> It's FREE
+    <br />
     <a href="https://github.com/j-c-m/xkcd-password-generator">source @ github</a>
+    <br/>
+    <font size="0.5em">
+    * Password is generated using client-side javascript, including using a cryptographically secure random number <br/>
+    generator on browsers supporting window.crypto.getRandomValues.
+    </font>
 </body>
 </html>
