--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
     <script src="index.js" type="text/javascript">
 </script>
-    <link rel="stylesheet" type="text/css" href="/blog/assets/css/screen.css">
+    <link rel="stylesheet" type="text/css" href="/css/screen.css">
     <style>body { text-align: center; }</style>
 </head>
 
